<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meeting_Service</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Nome">Nome</string>
    <string name="Idade">Idade</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso (kg)</string>
    <string name="busto">Busto (cm)</string>
    <string name="cintura">Cintura (cm)</string>
    <string name="quadril">Quadril (cm)</string>
    <string name="olhos">Cor dos Olhos</string>
    <string name="atendo">Atendo (Gênero)</string>
    <string name="especialidade">Especialidade</string>
    <string name="pernoite">Pernoite</string>
    <string name="horario_atent">(Horario) Atende a partir de</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="senha">Senha</string>
    <string name="avancar">Avançar</string>
    <string name="voltar">Voltar</string>
    <string name="alterarstatus">Alterar Status de Atendimento</string>
    <string name="sair">Sair</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="textoCadastre"><u>Cadastre-se já. É gratuito e sempre será</u></string>
    <string name="fotourl">Foto de Perfil ( URL ) </string>
    <string name="statusdisponivel">Disponível</string>
    <string name="statusocupado">Ocupada</string>
    <string name="alterandostatus">STATUS DE ATENDIMENTO</string>
    
    <string name="encontro_paraselecionar"> - Para Incluir </string>
    <string name="encontro_cliqueaqui">Clique Aqui</string>
    <string name="encontro_voceselecionou">Você selecionou: (Realize a Seleção)</string>
    <string name="encontro_data">Data:</string>
    <string name="encontro_hora">Hora:</string>
    <string name="encontro_servicos"> - Serviços</string>
    <string name="encontro_marcar">Marcar</string>
    <string name="encontro_cancelar">Cancelar</string>
    <string name="encontro_linha_exlcuir">Excluir</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    
    <string name="menu_ola">Olá,</string>
    <string name="menu_marcarEncontro">Marcar Encontro</string>
    
    

</resources>