<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Idade"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

            </EditText>

            <TextView
                android:id="@+id/textAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textBusto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busto"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textCintura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cintura" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textQaudril"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quadril" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textOlhos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olhos" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textPernoite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pernoite" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
             <TextView
                android:id="@+id/textEspecialidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/especialidade" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
             <TextView
                android:id="@+id/textHorarioAtent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario_atent" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Galeria Fotos" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MAPA"
            android:layout_gravity="center" 
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>