<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textNomeAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editNomeAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>


    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textIdadeAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editIdadeAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />


    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textAlturaAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editAlturaAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textPesoAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editPesoAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textBustoAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editBustoAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textCinturaAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cintura"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <EditText
        android:id="@+id/editCinturaAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textQuadrilAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quadril"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editQuadrilAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textOlhosAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olhos"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editOlhosAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textPernoiteAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pernoite"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editPernoiteAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textAtendoAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atendo"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editAtendoAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textEspecialidadeAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especialidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editEspecialidadeAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
     <TextView
         android:layout_marginLeft="20dp"
        android:id="@+id/textHorarioAtentAcomp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario_atent"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editHorarioAtentAcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    
    
    </LinearLayout>
</ScrollView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_marginLeft="20dp"
        
        android:layout_marginTop="10dp"
            android:id="@+id/buttonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cadastrar" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Cancelar" />

    </LinearLayout>
</LinearLayout>